--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
 	<meta charset='utf-8'>
 	<meta name='viewport' content='width=device-width,initial-scale=1'>
 
-	<title>tl;dr</title>
+	<title>TLDRify</title>
 
 	<link rel='icon' type='image/x-icon' href='/favicon.ico'>
 	<link rel='stylesheet' href='/global.css'>
